# songbird

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile.toml  README.md  build.rs  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
benches/: base-mixing.rs  mixing-task.rs
current/: help.html  search-index.js  settings.html  source-files.js  src-files.js
current/implementors/typemap_rev/: trait.TypeMapKey.js
current/songbird/: all.html  enum.Bitrate.html  enum.CoreEvent.html  enum.EventContext.html  enum.TrackEvent.html  fn.ffmpeg.html  fn.ytdl.html  index.html  sidebar-items.js  struct.Call.html  struct.Config.html  struct.ConnectionInfo.html  struct.Iter.html  struct.Songbird.html
current/songbird/constants/: constant.AUDIO_FRAME_RATE.html  constant.CHILD_BUFFER_LEN.html  constant.DEFAULT_BITRATE.html  constant.FRAME_LEN_MS.html  constant.MONO_FRAME_BYTE_SIZE.html  constant.MONO_FRAME_SIZE.html  constant.RTP_PROFILE_TYPE.html  constant.RTP_VERSION.html  constant.SAMPLE_RATE.html  constant.SAMPLE_RATE_RAW.html  constant.SILENT_FRAME.html  constant.STEREO_FRAME_BYTE_SIZE.html  constant.STEREO_FRAME_SIZE.html  constant.TIMESTEP_LENGTH.html  constant.UDP_KEEPALIVE_GAP.html  constant.UDP_KEEPALIVE_GAP_MS.html  constant.VOICE_GATEWAY_VERSION.html  constant.VOICE_PACKET_MAX.html  index.html  sidebar-items.js
current/songbird/driver/: enum.Bitrate.html  enum.CryptoMode.html  enum.DecodeMode.html  enum.MixMode.html  enum.SchedulerError.html  enum.SchedulerMode.html  index.html  sidebar-items.js  static.DEFAULT_SCHEDULER.html  struct.Config.html  struct.Connect.html  struct.Driver.html  struct.LiveStatBlock.html  struct.Scheduler.html  struct.SchedulerConfig.html
current/songbird/error/: enum.ConnectionError.html  enum.JoinError.html  enum.TrackError.html  index.html  sidebar-items.js  struct.JsonError.html  type.ConnectionResult.html  type.JoinResult.html  type.TrackResult.html
current/songbird/events/: enum.CoreEvent.html  enum.Event.html  enum.EventContext.html  enum.TrackEvent.html  enum.UntimedEvent.html  index.html  sidebar-items.js  struct.EventData.html  struct.EventStore.html  trait.EventHandler.html
current/songbird/id/: index.html  sidebar-items.js  struct.ChannelId.html  struct.GuildId.html  struct.UserId.html
current/songbird/info/: struct.ConnectionInfo.html
current/songbird/input/: enum.AudioStreamError.html  enum.AuxMetadataError.html  enum.Container.html  enum.Input.html  enum.LiveInput.html  enum.MakePlayableError.html  enum.MetadataError.html  fn.children_to_reader.html  fn.dca.html  fn.ffmpeg.html  fn.ffmpeg_optioned.html  fn.ytdl.html  fn.ytdl_search.html  index.html  sidebar-items.js  struct.AsyncAdapterStream.html  struct.AudioStream.html  struct.AuxMetadata.html  struct.ChildContainer.html  struct.File.html  struct.Frame.html  struct.HttpRequest.html  struct.Input.html  struct.Metadata.html  struct.Parsed.html  struct.RawAdapter.html  struct.YoutubeDl.html  trait.AsyncMediaSource.html  trait.Compose.html
current/songbird/join/: index.html  sidebar-items.js  struct.Join.html  struct.JoinGateway.html
current/songbird/manager/: struct.Iter.html  struct.Songbird.html
current/songbird/serenity/: fn.get.html  fn.register.html  fn.register_from_config.html  fn.register_with.html  index.html  sidebar-items.js  struct.SongbirdKey.html  trait.SerenityInit.html
current/songbird/shards/: enum.Shard.html  enum.Sharder.html  index.html  sidebar-items.js  struct.SerenityShardHandle.html  struct.SerenitySharder.html  struct.TwilightMap.html  trait.GenericSharder.html  trait.VoiceUpdate.html
current/songbird/tracks/: enum.ControlError.html  enum.LoopState.html  enum.PlayError.html  enum.PlayMode.html  enum.ReadyState.html  enum.TrackCommand.html  enum.TrackError.html  fn.create_player.html  fn.create_player_with_uuid.html  index.html  sidebar-items.js  struct.Action.html  struct.Queued.html  struct.Track.html  struct.TrackCallback.html  struct.TrackHandle.html  struct.TrackQueue.html  struct.TrackState.html  struct.View.html  type.TrackQueryResult.html  type.TrackResult.html
current/src/songbird/: config.rs.html  constants.rs.html  error.rs.html  (+9 more)
examples/: Cargo.toml  README.md
examples/serenity/voice/: Cargo.toml
examples/serenity/voice/src/: main-skip.rs  main.rs
examples/serenity/voice_cached_audio/: .gitignore  Cargo.toml
examples/serenity/voice_cached_audio/src/: main.rs
examples/serenity/voice_events_queue/: Cargo.toml
examples/serenity/voice_events_queue/src/: main.rs
examples/serenity/voice_receive/: Cargo.toml
examples/serenity/voice_receive/src/: main.rs
examples/serenity/voice_storage/: Cargo.toml
examples/serenity/voice_storage/src/: main.rs
examples/twilight/: Cargo.toml
examples/twilight/src/: main.rs
images/: arch.afdesign
next/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
next/songbird/: all.html  enum.Bitrate.html  enum.CoreEvent.html  enum.EventContext.html  enum.TrackEvent.html  fn.ffmpeg.html  fn.ytdl.html  index.html  sidebar-items.js  struct.Call.html  struct.Config.html  struct.ConnectionInfo.html  struct.Iter.html  struct.Songbird.html
next/static.files/: rustdoc-f0e60a452d3144ec.css
resources/: Cloudkicker - 2011 07.dca1  README.md
src/: config.rs  constants.rs  error.rs  handler.rs  id.rs  info.rs  join.rs  lib.rs  manager.rs  serenity.rs  shards.rs  test_utils.rs  ws.rs
src/driver/: bench_internals.rs  config.rs  crypto.rs  decode_mode.rs  mix_mode.rs  mod.rs  test_config.rs  test_impls.rs
src/events/: context.rs  core.rs  data.rs  mod.rs  store.rs  track.rs  untimed.rs
src/input/: adapter.rs  audiostream.rs  child.rs  compose.rs  dca.rs  error.rs  ffmpeg_src.rs  file.rs  http.rs  input_tests.rs  live_input.rs  metadata.rs  mod.rs  opus.rs  parsed.rs  raw.rs  reader.rs  registry.rs  restartable.rs  utils.rs  ytdl.rs  ytdl_src.rs
src/tracks/: action.rs  command.rs  error.rs  handle.rs  looping.rs  mod.rs  mode.rs  queue.rs  ready.rs  state.rs  view.rs
(+837 files in other folders)
