[workspace]
members = [
    "serenity/voice",
    "serenity/voice_cached_audio",
    "serenity/voice_events_queue",
    "serenity/voice_receive",
    "twilight",
]
resolver = "2"

[workspace.dependencies]
reqwest = "0.11"
serenity = { features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"], version = "0.12" }
songbird = { path = "../", version = "0.4" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tokio = { features = ["macros", "rt-multi-thread", "signal", "sync"], version = "1" }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[profile.release]
debug = true
