[package]
name = "twilight"
version = "0.1.0"
authors = ["Twilight and Serenity Contributors"]
edition = "2021"

[dependencies]
futures = "0.3"
reqwest = "0.11"
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { features = ["macros", "rt-multi-thread", "sync"], version = "1" }
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"
twilight-standby = "0.15"

[dependencies.songbird]
default-features = false
path = "../.."
features = ["driver", "gateway", "twilight", "rustls"]
