[package]
name = "twilight"
version = "0.1.0"
authors = ["Twilight and Serenity Contributors"]
edition = "2021"

[dependencies]
futures = "0.3"
reqwest = { workspace = true }
songbird = { workspace = true, features = ["driver", "gateway", "twilight", "rustls", "tws"] }
symphonia = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true }
tokio = { workspace = true }
twilight-gateway = "=0.16.0-rc.1"
twilight-http = "=0.16.0-rc.1"
twilight-model = "=0.16.0-rc.1"
twilight-standby = "=0.16.0-rc.1"
