[package]
name = "voice"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
path = "../../../"

[dependencies.serenity]
version = "0.10"
features = ["client", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]
