[package]
name = "voice"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
reqwest = "0.11"

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.songbird]
path = "../../../"

[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
# branch = "next"
rev = "df1bd8ff44a114df891f40a5db91e624f419a831"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]
