[package]
name = "voice_cached_audio"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
serenity = { version = "0.12.0-rc", features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"] }
symphonia = { features = ["mp3"], version = "0.5.2" }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
path = "../../../"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
