[package]
name = "voice_events_queue"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
reqwest = "0.11"
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
features = ["builtin-queue"]
path = "../../../"

[dependencies.serenity]
version = "0.11"
features = ["cache", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]
