[package]
name = "voice_receive"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
path = "../../../"

[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
# branch = "next"
rev = "e9c200d9af74994d09e40ae129b44f642522932f"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
