[package]
name = "voice_receive"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
dashmap = "5"
serenity = { version = "0.12.0-rc", features = ["client", "standard_framework", "voice", "rustls_backend"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
features = ["receive"]
path = "../../../"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
