[package]
name = "voice_receive"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
dashmap = "5"
serenity = { workspace = true }
songbird = { workspace = true, default-features = true, features = ["receive"] }
symphonia = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = { workspace = true }
