[package]
name = "voice_storage"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
path = "../../../"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
